--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "async-selector": "^1.0.26",
+    "mobx": "^5.15.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "recoil": "^0.0.10",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "redux-toolkit": "^1.1.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
